syntax = "proto3";

package api;

service Graph {
  rpc GetNode (GetNodeRequest) returns (GetNodeResponse) {}
  rpc GetNodes (GetNodesRequest) returns (stream GetNodesResponse) {}
  rpc AddNode (AddNodeRequest) returns (GetNodeResponse) {}
  rpc UpdateNode (UpdateNodeRequest) returns (GetNodeResponse) {}
  rpc DeleteNode (DeleteNodeRequest) returns (DeleteNodeResponse) {}
  rpc Subscribe (SubsribeRequest) returns (stream SubsribeResponse) {}
}

message SubsribeRequest {}


enum Commands {
  add=0;
  update=1;
  delete=2;
}

message SubsribeResponse {
  Commands command = 1;
  Node node = 2;
}

message Node {
  string id = 1;
  string name = 2;
  string parent_id = 3;
}

message GetNodeRequest {
  string id = 1;
}

message GetNodeResponse {
  Node node = 1;
}

message GetNodesRequest {
}

message GetNodesResponse {
  repeated Node node = 1;
}

message AddNodeRequest {
  string name = 1;
  string parent_id = 2;
}

message UpdateNodeRequest {
  string id = 1;
  Node node = 2;
}

message DeleteNodeRequest {
  string id = 1;
}

message DeleteNodeResponse {
  bool deleted = 1;
}